--- a/static/css/imd-styles.css
+++ b/static/css/imd-styles.css
@@ -374,10 +374,21 @@ body {
 .brands {
 	text-align: center;
 }
+
 .brands-used {
-	height: 100px;
+    transition-duration: 0.4s;
+    opacity: 0.4;
+	height: 75px;
 	margin: 15px;
 }
+
+.brands-used:hover {
+    opacity: 1;
+	height: 95px;
+	margin: 15px;
+}
+
+
 footer {
 	color: #fff;
 	background-color: #000;
@@ -747,11 +758,29 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2d2d2d', end
 @media screen and (max-width: 767px) {
     .xerox {
         float: right;
-        clear: all;
+        clear: both;
         position: absolute;
         left: -500px;
         top: 400px;
         width: 350px;
+    }
+}
+
+.latex {
+    float: right;
+    clear: all;
+    position: absolute;
+    left: 700px;
+    top: 2200px;
+}
+
+@media screen and (max-width: 960px) and (max-width: 1199px) {
+    .latex {
+        float: right;
+        clear: all;
+        position: absolute;
+        left: 500px;
+        top: 2200px;
     }
 }
 
@@ -778,6 +807,149 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2d2d2d', end
     background-size: cover;
     height: 500px;
 }
+
+.button-vehicle {
+    background: rgba(0,0,0,0.0);
+    width: 250px;
+    border: 4px solid white;
+    border-radius: 5px;
+    transition-duration: 0.4s;
+    color: white;
+    text-align: center;
+}
+
+.button-vehicle:hover {
+    background: red;
+    width: 250px;
+    border: 4px solid red;
+    border-radius: 5px;
+    color: white;
+    box-shadow: 2px 5px 5px rgba(,0,0,0.8);
+}
+
+.about-button {
+    background: rgba(0,0,0,0.0);
+    width: 250px;
+    border: 4px solid white;
+    border-radius: 5px;
+    transition-duration: 0.4s;
+    position: absolute;
+    left: 25%;
+}
+
+.about-button:hover {
+    background: white;
+    width: 250px;
+    border: 4px solid white;
+    border-radius: 5px;
+    transition-duration: 0.4s;
+}
+
+.branding-home {
+    background-image: url("../images/branding-home.png");
+    background-position: top center;
+}
+
+
+@-webkit-keyframes fadeInDownBig {
+        0% {
+                opacity: 0;
+                -webkit-transform: translateY(-2000px);
+        }
+        100% {
+                opacity: 1;
+                -webkit-transform: translateY(0);
+        }
+}
+@-moz-keyframes fadeInDownBig {
+        0% {
+                opacity: 0;
+                -moz-transform: translateY(-2000px);
+        }
+        100% {
+                opacity: 1;
+                -moz-transform: translateY(0);
+        }
+}
+@-o-keyframes fadeInDownBig {
+        0% {
+                opacity: 0;
+                -o-transform: translateY(-2000px);
+        }
+        100% {
+                opacity: 1;
+                -o-transform: translateY(0);
+        }
+}
+@keyframes fadeInDownBig {
+        0% {
+                opacity: 0;
+                transform: translateY(-2000px);
+        }
+        100% {
+                opacity: 1;
+                transform: translateY(0);
+        }
+}
+.fadeInDownBig {
+        -webkit-animation-name: fadeInDownBig;
+        -moz-animation-name: fadeInDownBig;
+        -o-animation-name: fadeInDownBig;
+        animation-name: fadeInDownBig;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
