--- a/static/css/imd-styles.css
+++ b/static/css/imd-styles.css
@@ -397,12 +397,15 @@ a:hover {
 }
 
 
-footer {
+.footer {
 	color: #fff;
 	background-color: #000;
 	padding-top: 5%;
 	padding-bottom: 5%;
+	width: 100%;
+	margin: 0px;
 }
+
 .copyright {
 	width: 100%;
 	color: #fff;
@@ -775,11 +778,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2d2d2d', end
 }
 
 .latex {
-    float: right;
-    clear: all;
-    position: absolute;
-    left: 700px;
-    top: 2200px;
+    width: 100%;
 }
 
 @media screen and (max-width: 960px) and (max-width: 1199px) {
@@ -816,33 +815,44 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2d2d2d', end
     height: 500px;
 }
 
-.button-vehicle {
-    background: rgba(0,0,0,0.0);
+.button-service {
+    background: none;
+    width: 250px;
+    border: 4px solid #f00;
+    border-radius: 5px;
+    transition-duration: 0.4s;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 28px;
+    color: #f00;
+    padding: 5px 20px 5px 20px;
+    margin-bottom: 10px;
+}
+
+.button-service:hover {
+    background: white;
     width: 250px;
     border: 4px solid white;
     border-radius: 5px;
     transition-duration: 0.4s;
-    color: white;
-    text-align: center;
-}
-
-.button-vehicle:hover {
-    background: red;
-    width: 250px;
-    border: 4px solid red;
-    border-radius: 5px;
-    color: white;
-    box-shadow: 2px 5px 5px rgba(,0,0,0.8);
+    color: #f00;
 }
 
 .about-button {
-    background: rgba(0,0,0,0.0);
+    background: none;
     width: 250px;
     border: 4px solid white;
     border-radius: 5px;
     transition-duration: 0.4s;
-    position: absolute;
-    left: 25%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 28px;
+    color: #fff;
+    padding: 5px 20px 5px 20px;
 }
 
 .about-button:hover {
@@ -851,6 +861,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2d2d2d', end
     border: 4px solid white;
     border-radius: 5px;
     transition-duration: 0.4s;
+    color: #f00;
 }
 
 .branding-home {
@@ -905,8 +916,122 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2d2d2d', end
         -o-animation-name: fadeInDownBig;
         animation-name: fadeInDownBig;
 }
+#mobile-services {
+	text-align: center;
+}
+.service-category {
+	height: 350px;
+	position: relative;
+	background-color: #000;
+	opacity: 1;
+}
+.serv-title {
+	position: absolute;
+	font-family: 'Oswald', sans-serif;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	border: solid 4px #f00;
+	border-radius: 5px;
+	padding: 30px;
+	background-color: rgba(250, 250, 250, 0.85);
+	transition: all ease .5s;
+}
+.vehicle-wraps {
+	background-image: url(../images/serv-thumb/vw-thumb.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+.tradeshows {
+	background-image: url(../images/serv-thumb/trade.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+.web-design {
+	background-image: url(../images/serv-thumb/web.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+.design-service {
+	background-image: url(../images/serv-thumb/brand.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+.signs-banners {
+	background-image: url(../images/serv-thumb/signs.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+.printing {
+	background-image: url(../images/serv-thumb/decals.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+.photography {
+	background-image: url(../images/serv-thumb/photo.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+.window-wall-floor {
+	background-image: url(../images/serv-thumb/wall.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+.imdlogo {
+	width: 100%;
+	max-width: 750px;
+	padding-right: 15px;
+	padding-left: 15px;
+}
+.web-image {
+	width: 100%;
+}
+.web-section {
+	background-color: #ffcc33;
+}
+.tradeshow-section {
+	background-color: #3498db;
+}
 
-
+.tradeshow-section img {
+	width: 100%;
+}
+.signbanner-section {
+	background: url(../images/signs-1.png);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.white-space {
+	height: 300px;
+}
+.window-section {
+	padding-top: 50px;
+	padding-bottom: 50px;
+	background-color: #000;
+}
+.floor-image {
+	width: 450px;
+	height: 450px;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 50%;
+	overflow: hidden;
+}
+.floor-image img {
+	width: auto;
+	height: 450px;
+}
+.photo-section {
+	background: url(../images/studio-1.jpg);
+	background-size: 100%;
+	background-position: 50% 30%;
+}
+.white-space-photo {
+	height: 500px;
+}
+.printing-section {
+	background-color: #000;
+}
 
 
 
