--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
 
 		{% endblock %}
 	<footer class="footer">
-		<div class="row">
+		<div class="container-fluid">
 			<div class="col-md-10 col-md-offset-1">
 				<div class="row">
 					<div class="col-md-3">
