--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,5 +3,15 @@
 {% block title %}Contact Us{% endblock %}
 
 {% block content %}
-
+<div class="container-fluid" style="margin-top: 150px;">
+<div class="col-md-4 col-md-offset-4">
+	<form method="post">
+		{% csrf_token %}
+		{{ form }}
+		<div class="form-action">
+			<button type="submit" class="btn btn-primary">Send</button>
+		</div>
+	</form>
+</div>
+</div>
 {% endblock %}
