--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,1 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}IMD-SD | Gallery{% endblock %}
+{% block content %}
+<div class="jumbotron"></div>
+<h1>COMING SOON!</h1>
+<p>We are working on bringing picture of our recent work to the site. Please stand by.</p>
+{% endblock %}
