--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
 {% block title %}IMD-SD | Gallery{% endblock %}
 {% block content %}
-<div class="jumbotron"></div>
-<h1>COMING SOON!</h1>
-<p>We are working on bringing picture of our recent work to the site. Please stand by.</p>
+<div class="container-fluid">
+	<div class="row gallery">
+		<div class="coming-soon">
+			<h1>COMING SOON!</h1>
+			<p>We are working on our awesome gallery that will showcase the work we do here in IMD<br>On the mean time, check out our <a href="https://instagram.com/imdsandiego" target="blank">Instagram</a></p>
+		</div>
+	</div>
+</div>
 {% endblock %}
