--- a/static/css/imd-styles.css
+++ b/static/css/imd-styles.css
@@ -1039,103 +1039,64 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2d2d2d', end
 .footer-phone {
 	color: #fff;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.contact-page {
+	padding-bottom: 25px;
+	padding-top: 100px;
+	text-align: center;
+	background-color: #e74c3c;
+}
+.contact-page img {
+	width: 100%;
+}
+.form-bg {
+	margin-bottom: 35px;
+	margin-top: 35px;
+}
+.form-bg label{
+	color: #fff;
+	padding: 5px;
+	font-size: 16px;
+	margin-top: 5px;
+	font-family: "Oswald", sans-serif;
+
+}
+.contact-content {
+	background-color: #737373;
+}
+.contact-top-content {
+	color: #fff;
+	text-align: center;
+	font-family: "Oswald", sans-serif;
+}
+.contact-left-side {
+	color: #fff;
+	font-family: "Oswald", sans-serif;
+	font-size: 14px;
+}
+.btn-contact {
+	font-size: 16px;
+	color: #fff;
+	border: solid #fff 3px;
+	background: none;
+	margin: 5px;
+	font-family: "Oswald", sans-serif;
+}
+.gallery {
+	background-image: url(../images/red-bg.jpg);
+	background-size: 100%;
+	background-position: center;
+	height: 750px;
+	position: relative;
+}
+.coming-soon {
+	font-family: "Oswald", sans-serif;
+	font-size: 48px;
+	color: #fff;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+.coming-soon h1 {
+	font-size: 63px;
+}
