--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -2,6 +2,15 @@
 {% load staticfiles %}
 
 {% compress js %}
+<script type="text/javascript">
+  function handleAuthResult(authResult) {
+  if (authResult) {
+    gapi.client.load('analytics', 'v3', handleAuthorized);
+  } else {
+    handleUnauthorized();
+  }
+}
+</script>
 <script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script>
 <script type="text/javascript" src="{% static "js/prefixfree.min.js" %}"></script>
 <script type="text/javascript" src="{% static "js/script.js" %}"></script>
