--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>{% block head_title %}IMD-SD{% endblock %}</title>
 	{% load staticfiles %}
-	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">-->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
 	<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap-theme.min.css" %}">
 
